restyle order book to fix alignment issues

--- a/src/modules/market/components/market-outcome-charts--header/market-outcome-charts--header.styles.less
+++ b/src/modules/market/components/market-outcome-charts--header/market-outcome-charts--header.styles.less
@@ -72,7 +72,9 @@
 .MarketOutcomeChartsHeader__stat--right {
   &:extend(.MarketOutcomeChartsHeader__stat);
 
+  flex: 1;
   justify-content: flex-end;
+  margin-top: 0.4em;
 }
 
 .MarketOutcomeChartsHeader__stat-title {
